# bark-engine

./: .gitignore  Cargo.toml  README.md  build.rs
engine/: Cargo.toml
engine/src/: core.rs  lib.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
src/: core.rs  event.rs  lib.rs  sandbox.rs
src/event/: buffer.rs  mod.rs  repo.rs
src/graphics/: mod.rs  window.rs
src/graphics/mywgpu/: mod.rs  state.rs  vertex.rs
src/graphics/mywgpu/assets/: light.vert  shader.frag  shader.vert
src/graphics/mywgpu/state/: camera.rs  input_controller.rs  instance.rs  light.rs  model.rs  texture.rs  uniform.rs  vertex.rs
src/graphics/mywgpu/state/model/: draw_model.rs
src/graphics/wgpu/: mod.rs
