[package]
name = "bark_engine"
version = "0.1.0"
authors = ["NassimBD <nassbd@hotmail.fr>"]
edition = "2018"
readme = "README.md"
keywords = ["engine", "game", "gamedev", "graphics"]
categories = ["game-engines", "graphics", "rendering"]
repository = "https://github.com/NassimBD/bark-engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "sandbox"
]
default-members = [
  "sandbox"
]

[dependencies]
log = "0.4"