[package]
name = "bark_engine"
version = "0.1.0"
authors = ["NassimBD <nassbd@hotmail.fr>"]
edition = "2018"
readme = "README.md"
keywords = ["engine", "game", "gamedev", "graphics"]
categories = ["game-engines", "graphics", "rendering"]
repository = "https://github.com/NassimBD/bark-engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "sandbox"
]
default-members = [
  "sandbox"
]

[dependencies]
log = "0.4"
# Wgpu
raw-window-handle = "0.3"
image = "0.23"
winit = "0.23"
cgmath = "0.17"
futures = "0.3"
bytemuck = "1.4"
anyhow = "1.0"
# to remove apparently https://sotrh.github.io/learn-wgpu/beginner/tutorial1-window/#what-crates-are-we-using
[dependencies.wgpu]
version = "0.6"
features = ["vulkan-portability"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.7"
