[package]
name = "sandbox"
version = "0.1.0"
authors = ["NassimBD <nassbd@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Engine dependencies
bark_engine = { path = ".." }
# Others
log = "0.4"
env_logger = "0.8"
